Sun Aug 16 20:51:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_init): fatal warning option is split up now,
	"--g-fatal-warnings" causes fatal warnings in GLib,
 	"--gdk-fatal-warnings" causes fatal warnings in Gdk,
 	"--gtk-fatal-warnings" causes fatal warnings in Gtk.

	* gtk/Makefile.am: define G_LOG_DOMAIN for gtk.
	* gdk/Makefile.am: define G_LOG_DOMAIN for gdk.

	* gtk/testgtk.c: 
	* gdk/gxid.c:
 	we need ugly #undef G_LOG_DOMAIN at the start of these files currently,
 	since automake doesn't support per target _CFLAGS yet.

	* configure.in: require GLib 1.1.3.

Sat Aug 15 03:19:30 1998  John Ellis  <johne@bellatlantic.net>

	* gtk/gtkctree.[ch] (gtk_ctree_set_drag_compare_func): New function
	to set a callback to test if a node in drag can be dropped onto
	it's currrent location.
	* gtk/gtkctree.c (set_mouse_cursor),(check_cursor): New functions
	to change the pointer when a drag destination is not allowed.

Thu Aug 13 21:06:00 1998  Raph Levien  <raph@gtk.org>

	* gdk/gdkrgb.c: committing a patch by Ray Lehtiniemi that
	speeds up the 565_d case by about 25% total. Thanks Ray!

Thu Aug 13 16:47:44 1998  Owen Taylor  <otaylor@redhat.com>

	* Changed GtkSignalFunc back to () from (void). (again!)

	* Added file README.cvs-commits
	
Thu Aug 13 09:11:11 BST 1998  Tony Gale  <gale@gtk.org>

        * docs/gtk_tut.sgml:
          - Tidy up of the menufactory example from
            Andy Kahn <kahn@zk3.dec.com>
          - New section on Range Widgets from
            David Huggins-Daines <bn711@freenet.carleton.ca>
          - Started a new section on 'Advanced Event and Signal
            Handling' - used an email from Owen.
          - New appendix on Gdk Event Types
          - Added the tictactoe full example code to the
            'Code Examples' appendix

Tue Jul 21 12:42:01 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h gdk/gdkfont.c: Added gdk_text/string_extents() - 
	  to calculate all the metrics at once of a string, including