@@ -1,7 +1,7 @@
 General Information
 ===================
 
-This is GTK+ version 1.1.1.   GTK+, which stands for the Gimp ToolKit, 
+This is GTK+ version 1.1.2.   GTK+, which stands for the Gimp ToolKit, 
 is a library for creating graphical user interfaces for the X Window 
 System. It is designed to be small, efficient, and flexible. GTK+ is 
 written in C with a very object-oriented approach.
