@@ -14,7 +14,7 @@ cflags_set=${CFLAGS+set}
 #
 GTK_MAJOR_VERSION=1
 GTK_MINOR_VERSION=1
-GTK_MICRO_VERSION=1
+GTK_MICRO_VERSION=2
 GTK_INTERFACE_AGE=0
 GTK_BINARY_AGE=0
 GTK_VERSION=$GTK_MAJOR_VERSION.$GTK_MINOR_VERSION.$GTK_MICRO_VERSION
@@ -140,8 +140,9 @@ if test x$with_glib = x ; then
 
   AM_PATH_GLIB(1.1.3,,
     AC_MSG_ERROR([
-*** GLIB 1.1.1 or better is required. The latest version of GLIB
-*** is always available from ftp://ftp.gtk.org.]))
+*** GLIB 1.1.3 or better is required. The latest version of GLIB
+*** is always available from ftp://ftp.gtk.org.]),
+    gmodule)
 
   glib_cflags=$GLIB_CFLAGS
   glib_libs=$GLIB_LIBS
