@@ -334,6 +334,33 @@ gtk_init (int	 *argc,
               g_log_set_fatal_mask (G_LOG_DOMAIN, fatal_levels);
 	      (*argv)[i] = NULL;
 	    }
+	  else if (strcmp ("--g-fatal-checks", (*argv)[i]) == 0)
+	    {
+	      GLogLevelFlags fatal_levels;
+
+	      fatal_levels = g_log_set_fatal_mask (g_log_domain_glib, G_LOG_FATAL_MASK);
+	      fatal_levels |= G_LOG_LEVEL_CRITICAL;
+              g_log_set_fatal_mask (g_log_domain_glib, fatal_levels);
+	      (*argv)[i] = NULL;
+	    }
+	  else if (strcmp ("--gdk-fatal-checks", (*argv)[i]) == 0)
+	    {
+	      GLogLevelFlags fatal_levels;
+
+	      fatal_levels = g_log_set_fatal_mask ("Gdk", G_LOG_FATAL_MASK);
+	      fatal_levels |= G_LOG_LEVEL_CRITICAL;
+              g_log_set_fatal_mask ("Gdk", fatal_levels);
+	      (*argv)[i] = NULL;
+	    }
+	  else if (strcmp ("--gtk-fatal-checks", (*argv)[i]) == 0)
+	    {
+	      GLogLevelFlags fatal_levels;
+
+	      fatal_levels = g_log_set_fatal_mask (G_LOG_DOMAIN, G_LOG_FATAL_MASK);
+	      fatal_levels |= G_LOG_LEVEL_CRITICAL;
+              g_log_set_fatal_mask (G_LOG_DOMAIN, fatal_levels);
+	      (*argv)[i] = NULL;
+	    }
 	  i += 1;
 	}
 
